--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="boarders">Boarders :</string>
+    <string name="region">Region :</string>
 </resources>
