--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ShayCountriesTest</string>
-    <string name="retry_text">Error</string>
+    <string name="retry_text">error loading data, press to retry</string>
     <string name="loading">Loading Data...</string>
     <string name="regions_title">Regions</string>
     <string name="capital">Capital :</string>
